--- a/templates/Login/login.html
+++ b/templates/Login/login.html
@@ -74,6 +74,9 @@
             <div class="criar-conta">
                 <p>Ainda não tem uma conta ? <a href="{% url 'criarConta' %}">Criar conta</a></p>
             </div>
+            <div class="cadastrar-clinica">
+                <p>Junte-se a nós. Cadastre a sua clinica <a href="{% url 'criarConta' %}"> aqui</a></p>
+            </div>
         </div>
     </div>
 
