--- a/static/css/HeaderFooter/HeaderFooter.css
+++ b/static/css/HeaderFooter/HeaderFooter.css
@@ -303,3 +303,10 @@ html, body {
       justify-content: center;
     }
   }  
+
+  .notificacao {
+    width: 35px;   
+    height: 35px;  
+    object-fit: contain; /* mantém a proporção sem distorcer */
+    cursor: pointer;
+}
