--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -15,7 +15,7 @@
 
     <div class="actions">
         <!-- Sino de notificações (desktop) -->
-        <i class="fas fa-bell" id="notifBtn"></i>
+        <img src="{% static 'img/Notificacao.png' %}" alt="notificações" class="notificacao"></img>
 
         <!-- Avatar do usuário (desktop) -->
         <div class="user-avatar" id="desktopAvatar"></div>
