--- a/static/css/PerfilDoProfissional/PerfilDoProfissional.css
+++ b/static/css/PerfilDoProfissional/PerfilDoProfissional.css
@@ -230,3 +230,42 @@ main {
   from {opacity: 0; transform: scale(0.98);}
   to {opacity: 1; transform: scale(1);}
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background: white;
+  padding: 25px;
+  width: 420px;
+  max-width: 90%;
+  border-radius: 12px;
+}
+
+.hora-btn {
+  padding: 8px 15px;
+  margin: 5px;
+  border: 1px solid #007bff;
+  background: #fff;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.hora-btn.selecionado {
+  background: #007bff;
+  color: white;
+}
+
+button {
+  cursor: pointer;
+}
