--- a/odontoPro/templates/Login/login.html
+++ b/odontoPro/templates/Login/login.html
@@ -26,7 +26,7 @@
     <div class="container">
 
         <div class="pacienteimg">
-            <img src="{% static 'img/rectangle_2764.png' %}" alt="Imagem OdontoPro">
+            <img src="{% static 'img/rectangle 2764.png' %}" alt="Imagem OdontoPro">
         </div>
 
         <div class="login">
