--- a/odontoPro/templates/Perfil/perfil.html
+++ b/odontoPro/templates/Perfil/perfil.html
@@ -71,7 +71,7 @@
       {% if clinica.imagem %}
         <img src="{{ clinica.imagem.url }}" alt="{{ clinica.nome }}" class="clinic-img">
       {% else %}
-        <img src="{% static 'OdontoIMG/default_clinica.png' %}" alt="{{ clinica.nome }}" class="clinic-img">
+        <img src="{% static 'img/Clinica Orto.png' %}" alt="{{ clinica.nome }}" class="clinic-img">
       {% endif %}
 
       <div class="clinic-info">
