--- a/odontoPro/templates/PerfilDoProfissional/PerfilDoProfissional.html
+++ b/odontoPro/templates/PerfilDoProfissional/PerfilDoProfissional.html
@@ -21,7 +21,7 @@
       {% if profissional.foto %}
         <img src="{{ profissional.foto.url }}" alt="{{ profissional.nome }}" class="perfil-foto"/>
       {% else %}
-        <img src="{% static 'imgs/default-user.png' %}" alt="{{ profissional.nome }}" class="perfil-foto"/>
+        <img src="{% static 'img/UserIcon.png' %}" alt="{{ profissional.nome }}" class="perfil-foto"/>
       {% endif %}
 
       <div class="perfil-info">
