--- a/odontoPro/templates/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
+++ b/odontoPro/templates/ProfissionaisDisponiveis/ProfissionaisDisponiveis.html
@@ -59,7 +59,7 @@
               {% if profissional.foto %}
                   <img src="{{ profissional.foto.url }}" alt="{{ profissional.nome }}">
               {% else %}
-                  <img src="{% static 'imgs/default-user.png' %}" alt="Sem foto">
+                  <img src="{% static 'img/UserIcon.png' %}" alt="Sem foto">
               {% endif %}
       
               <!-- NOME -->
